--- a/web/app/themes/pvtl/sass/theme/partials/_blog.scss
+++ b/web/app/themes/pvtl/sass/theme/partials/_blog.scss
@@ -1,3 +1,6 @@
+.blog .wrapper {
+  margin-bottom: 40px;
+}
 
 // Styles for all post lists
 .post-list {
